welcome.lessons.welcome.instructions.Instructions.scala.error
Program:3: error: illegal start of simple pattern
for(int h<-0 to 3){
         ^Program:12: error: '<-' expected but '}' found.
	}
        ^