welcome.lessons.welcome.instructions.Instructions.scala.code
baisseBrosse();
for(int h<-0 to 3){
	for(int i<-0 to 2){
		avance();
	}
	droite();
	avance();
}
